# Home_Work_Web_13part2

./: pyproject.toml
hw10/authors/: urls.py  views.py
hw10/authors/static/authors/: style.css
hw10/authors/templateauthor/: extract.py
hw10/authors/templates/authors/: base.html  index.html
hw10/hw10/: settings.py  urls.py  views.py
hw10/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw10/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
hw10/quotes/templates/quotes/: add_author.html  add_quote.html  authors.html  base.html  index.html  index_authors.html
hw10/quotes/templatetags/: extract.py
hw10/users/: urls.py  views.py
hw10/users/templates/users/: login.html  logout.html  signup.html
hw10/utils/: add_authors_to_posgres.py  add_quotes__to_posgres.py  add_quotes_to_mongo.py  authors.json
