[tool.poetry]
name = "hw"
version = "0.1.0"
description = ""
authors = ["OlhaVerbova <137227019+OlhaVerbova@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
pymongo = "^4.6.1"
psycopg2 = "^2.9.9"
quotes = "^0.0.3"
django-environ = "^0.11.2"
environ = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
